--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -232,7 +232,6 @@
 
 
             </div>
-
             <div class="video-grid-slider mt-4" uk-slider="finite: true">
 
                 <div class="grid-slider-header">
@@ -254,162 +253,9 @@
                     </div>
                 </div>
 
-                <ul id="recommend" class="uk-slider-items uk-child-width-1-4@m uk-child-width-1-3@s uk-grid">
-                    <li>
-                        <a href="single-video.html" class="video-post">
-                            <!-- Blog Post Thumbnail -->
-                            <div class="video-post-thumbnail">
-                                <span class="video-post-count">1.4M</span>
-                                <span class="video-post-time">23:00</span>
-                                <span class="play-btn-trigger"></span>
-                                <!-- option menu -->
-                                <span class="btn-option">
-                                            <i class="icon-feather-more-vertical"></i>
-                                        </span>
-                                <div class="dropdown-option-nav"
-                                     uk-dropdown="pos: bottom-right ;mode : hover ;animation: uk-animation-slide-bottom-small">
-                                    <ul>
-                                        <li>
-                                            <span> <i class="uil-history"></i> Watch Later</span>
-                                        </li>
-                                        <li>
-                                            <span> <i class="uil-bookmark"></i> Add Bookmark</span>
-                                        </li>
-                                        <li>
-                                            <span> <i class="uil-share-alt"></i> Share Your Friends</span>
-                                        </li>
-                                    </ul>
-                                </div>
+                <ul id="recommendMovie" class="uk-slider-items uk-child-width-1-4@m uk-child-width-1-3@s uk-grid">
 
-                                <img src="assets/images/video-thumbal/img-1.png" alt="">
 
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="single-video.html" class="video-post">
-                            <!-- Blog Post Thumbnail -->
-                            <div class="video-post-thumbnail">
-                                <span class="video-post-count">1.4M</span>
-                                <span class="video-post-time">23:00</span>
-                                <span class="play-btn-trigger"></span>
-                                <!-- option menu -->
-                                <span class="btn-option">
-                                            <i class="icon-feather-more-vertical"></i>
-                                        </span>
-                                <div class="dropdown-option-nav"
-                                     uk-dropdown="pos: bottom-right ;mode : hover ;animation: uk-animation-slide-bottom-small">
-                                    <ul>
-                                        <li>
-                                            <span> <i class="uil-history"></i> Watch Later</span>
-                                        </li>
-                                        <li>
-                                            <span> <i class="uil-bookmark"></i> Add Bookmark</span>
-                                        </li>
-                                        <li>
-                                            <span> <i class="uil-share-alt"></i> Share Your Friends</span>
-                                        </li>
-                                    </ul>
-                                </div>
-
-                                <img src="assets/images/video-thumbal/img-1.png" alt="">
-
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="single-video.html" class="video-post">
-                            <!-- Blog Post Thumbnail -->
-                            <div class="video-post-thumbnail">
-                                <span class="video-post-count">1.4M</span>
-                                <span class="video-post-time">23:00</span>
-                                <span class="play-btn-trigger"></span>
-                                <!-- option menu -->
-                                <span class="btn-option">
-                                            <i class="icon-feather-more-vertical"></i>
-                                        </span>
-                                <div class="dropdown-option-nav"
-                                     uk-dropdown="pos: bottom-right ;mode : hover ;animation: uk-animation-slide-bottom-small">
-                                    <ul>
-                                        <li>
-                                            <span> <i class="uil-history"></i> Watch Later</span>
-                                        </li>
-                                        <li>
-                                            <span> <i class="uil-bookmark"></i> Add Bookmark</span>
-                                        </li>
-                                        <li>
-                                            <span> <i class="uil-share-alt"></i> Share Your Friends</span>
-                                        </li>
-                                    </ul>
-                                </div>
-
-                                <img src="assets/images/video-thumbal/img-1.png" alt="">
-
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="single-video.html" class="video-post">
-                            <!-- Blog Post Thumbnail -->
-                            <div class="video-post-thumbnail">
-                                <span class="video-post-count">1.4M</span>
-                                <span class="video-post-time">23:00</span>
-                                <span class="play-btn-trigger"></span>
-                                <!-- option menu -->
-                                <span class="btn-option">
-                                            <i class="icon-feather-more-vertical"></i>
-                                        </span>
-                                <div class="dropdown-option-nav"
-                                     uk-dropdown="pos: bottom-right ;mode : hover ;animation: uk-animation-slide-bottom-small">
-                                    <ul>
-                                        <li>
-                                            <span> <i class="uil-history"></i> Watch Later</span>
-                                        </li>
-                                        <li>
-                                            <span> <i class="uil-bookmark"></i> Add Bookmark</span>
-                                        </li>
-                                        <li>
-                                            <span> <i class="uil-share-alt"></i> Share Your Friends</span>
-                                        </li>
-                                    </ul>
-                                </div>
-
-                                <img src="assets/images/video-thumbal/img-1.png" alt="">
-
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="single-video.html" class="video-post">
-                            <!-- Blog Post Thumbnail -->
-                            <div class="video-post-thumbnail">
-                                <span class="video-post-count">1.4M</span>
-                                <span class="video-post-time">23:00</span>
-                                <span class="play-btn-trigger"></span>
-                                <!-- option menu -->
-                                <span class="btn-option">
-                                            <i class="icon-feather-more-vertical"></i>
-                                        </span>
-                                <div class="dropdown-option-nav"
-                                     uk-dropdown="pos: bottom-right ;mode : hover ;animation: uk-animation-slide-bottom-small">
-                                    <ul>
-                                        <li>
-                                            <span> <i class="uil-history"></i> Watch Later</span>
-                                        </li>
-                                        <li>
-                                            <span> <i class="uil-bookmark"></i> Add Bookmark</span>
-                                        </li>
-                                        <li>
-                                            <span> <i class="uil-share-alt"></i> Share Your Friends</span>
-                                        </li>
-                                    </ul>
-                                </div>
-
-                                <img src="assets/images/video-thumbal/img-1.png" alt="">
-
-                            </div>
-                        </a>
-                    </li>
                 </ul>
 
             </div>
@@ -565,7 +411,7 @@
 <script src="assets/js/jquery-3.3.1.min.js"></script>
 <script src="assets/js/simplebar.js"></script>
 <script src="assets/js/main.js"></script>
-<!--热门电影Ajax-->
+<!--查看电影详情-->
 <script>
     function showMovieDetail(nId) {
         localStorage.setItem('movieId', nId);
@@ -580,6 +426,7 @@
         })
     }
 </script>
+<!--热门电影-->
 <script>
     $(document).ready(function () {
         $.ajax({
@@ -625,6 +472,81 @@
                         "</li>"
                 }
                 test.innerHTML = str1;
+
+            },
+            error: function (arg1) {
+                alert("加载数据失败");
+                console.log(arg1);
+            }
+        })
+    })
+</script>
+<!--基于物品推荐-->
+<script>
+    $(document).ready(function () {
+        var recommenduser = localStorage.getItem("userIdTJ");
+        console.log(recommenduser)
+        $.ajax({
+            url: "http://localhost:8080/mahout?userId=" + recommenduser,
+            dataType: 'json', //数据格式
+            type: "get",//请求方式
+            xhrFields: {
+                withCredentials: true
+            },
+            success: function (data) {
+                console.log(data)
+                var str1="";
+                for (var i = 0; i < data.length; i++) {
+                    $.ajax({
+                        url: "http://localhost:8080/getMovieDetail?id=" + data[i].itemID,
+                        dataType: 'json', //数据格式
+                        type: "get",//请求方式
+                        xhrFields: {
+                            withCredentials: true
+                        },
+                        success: function (data) {
+                            var tt = data.data;
+                            console.log(tt);
+                            var cCover = tt.cmovieCover;
+                            var nId = tt.nid;
+                            str1 += "<li><a onclick='showMovieDetail(\"" + nId + "\")' class=\"video-post\">" +
+                                "<div class=\"video-post-thumbnail\">" +
+                                "<span class=\"video-post-count\">" + tt.nviews + "</span>" +
+                                "<span class=\"video-post-time\">" + tt.nfilmLength + "分钟" + "</span>" +
+                                "<span class=\"play-btn-trigger\"></span>" +
+                                "<span class=\"btn-option\">" +
+                                "<i class=\"icon-feather-more-vertical\"></i>" +
+                                "</span>" +
+                                "<div class=\"dropdown-option-nav\" uk-dropdown=\"pos: bottom-right ;mode : hover ;animation: uk-animation-slide-bottom-small\">" +
+                                "<ul>" +
+
+                                "<li>" +
+                                "<span> <i class=\"uil-bookmark\"></i> Collect</span>" +
+                                "</li>" +
+                                "<li>" +
+                                "<span> <i class=\"uil-share-alt\"></i> Share Your Friends</span>" +
+                                "</li>" +
+                                "</ul>" +
+                                "</div>" +
+                                "<img src='" + cCover + "' referrerPolicy=\"no-referrer\">" +
+                                "</div>" +
+                                "<div class=\"video-post-content\">" +
+                                "<h3>" + tt.cname + " </h3>" +
+
+                                "</div>" +
+                                "</a>" +
+                                "</li>";
+                            recommendMovie.innerHTML = str1;
+                        },
+                        error: function (arg1) {
+                            alert("加载数据失败");
+                            console.log(arg1);
+                        }
+                    })
+
+                }
+                // console.log(str1.length);
+                // recommendMovie.innerHTML = str1;
 
             },
             error: function (arg1) {
@@ -707,10 +629,17 @@
                 for (var i = 0; i < tt.length; i++) {
                     var cCover = tt[i].cmovieCover;
                     var nId = tt[i].nid;
+                    var nIshot = tt[i].nisHot;
+                    var flag;
+                    if (nIshot == 1) {
+                        flag = "付费";
+                    } else {
+                        flag = "免费"
+                    }
                     str1 += "<div>" +
                         "<a onclick='showMovieDetail(\"" + nId + "\")' class=\"video-post\">" +
                         "<div class=\"video-post-thumbnail\">" +
-                        "<span class=\"video-post-count\">" + tt[i].nviews + "</span>" +
+                        "<span class=\"video-post-count\">" + flag + "</span>" +
                         "<span class=\"video-post-time\">" + tt[i].nfilmLength + "分钟" + "</span>" +
                         "<span class=\"play-btn-trigger\"></span>" +
                         "<span class=\"btn-option\">" +
@@ -737,6 +666,7 @@
                         "</div>"
 
                 }
+
                 allMovie.innerHTML = str1;
 
             },
@@ -762,7 +692,7 @@
             success: function (data) {
 
                 var dd = data.data;
-             localStorage.setItem("userId",dd.nid);
+                localStorage.setItem("userId", dd.nid);
             }
         })
 
